--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -161,6 +161,21 @@ input {
 	@extend .error;
 }
 
+/* Users index */
+
+.users {
+	list-style: none;
+	margin: 0;
+	li {
+	overflow: auto;
+	padding: 10px 0;
+	border-top: 1 px solid $grayLighter;
+	&:last-child {
+	border-bttom: 1px solid $grayLighter;
+	}
+	}
+}
+
 /* miscellaneous */
 
 .debug_dump {
